--- a/page3.html
+++ b/page3.html
@@ -304,7 +304,7 @@
                 </div>
                 <input type="file" id="fileInput" accept=".mp4" />
                 <div class="file-info" id="fileInfo"></div>
-                <button id="uploadBtn" disabled>Upload File</button>
+                <button type="button" id="uploadBtn" disabled>Upload File</button>
                 <div class="status" id="uploadStatus"></div>
                 <div class="progress-bar" id="progressBar" style="display: none;">
                     <div class="progress-fill" id="progressFill"></div>
