--- a/page3.html
+++ b/page3.html
@@ -319,6 +319,12 @@
                         <div class="empty-message">No files uploaded yet</div>
                     </div>
                 </div>
+                <div class="file-list">
+                    <h3>Processed Frames</h3>
+                    <button type="button" id="annotateBtn">Apply Corrected Labels</button>
+                    <div class="status" id="annotateStatus">Ready to apply corrected labels to frames.</div>
+                    <button type="button" id="downloadAnnotatedBtn" class="download-btn">⬇️ Download Annotated Frames</button>
+                </div>
             </div>
         </div>
     </div>
