--- a/page1.html
+++ b/page1.html
@@ -229,6 +229,13 @@
                 <button type="button" id="startBtn">▶️ Start Recording</button>
                 <button type="button" id="stopBtn" disabled>⏹️ Stop Recording</button>
                 <button type="button" id="captureFrameBtn">📸 Capture Frame</button>
+                <button type="button" id="refreshLogsBtn">🔄 Refresh Logs</button>
+            </div>
+            
+            <div class="button-group">
+                <button type="button" id="loadDemoBtn">📂 Load Demo Data</button>
+                <input type="file" id="demoFileInput" accept=".json" style="display: none;">
+                <button type="button" id="clearDataBtn">🗑️ Clear Data</button>
             </div>
             
             <div class="button-group">
