--- a/page3.html
+++ b/page3.html
@@ -305,6 +305,7 @@
                 <input type="file" id="fileInput" accept=".mp4" />
                 <div class="file-info" id="fileInfo"></div>
                 <button type="button" id="uploadBtn" disabled>Upload File</button>
+                <button type="button" id="processVideoBtn" disabled>🎬 Process Video (YOLO Detection)</button>
                 <div class="status" id="uploadStatus"></div>
                 <div class="progress-bar" id="progressBar" style="display: none;">
                     <div class="progress-fill" id="progressFill"></div>
