--- a/page1.html
+++ b/page1.html
@@ -246,6 +246,7 @@
         </div>
     </div>
     
+    <script src="js/detection-utils.js"></script>
     <script src="js/video-capture.js"></script>
 </body>
 </html>
