--- a/page3.html
+++ b/page3.html
@@ -330,6 +330,8 @@
         </div>
     </div>
     
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="js/detection-utils.js"></script>
     <script src="js/file-manager.js"></script>
 </body>
 </html>
